# ondewo-vtsi-client-python

./: .coverage  .flake8  .gitignore  .gitmodules  .isort.cfg  .markdownlint-cli2.yaml  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile.utils  MANIFEST.in  Makefile  README.md  RELEASE.md  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: tests.yml
envs/: versions.env
examples/: environment.env
examples/analysis/: analysis.py
examples/caller/: caller_deployment.py  caller_deployment_minimal.py  caller_deployment_mirror_mode.py  configure_context_parameters.py  configure_vtsi_server.py  full_config.py  full_demo.py  make_multiple_calls.py
examples/calls/: list_calls.py
examples/configs/: insecure_grpc.json  secure_grpc_placeholder.json
examples/listener/: listener_deployment.py  minimal_listener.py
examples/projects/: get_vtsi_project.py
google/api/: http_pb2.pyi
google/longrunning/: operations_pb2.py  operations_pb2.pyi
google/rpc/: status_pb2.py  status_pb2.pyi
google/type/: latlng_pb2.py  latlng_pb2.pyi
ondewo/nlu/: agent_pb2.py  agent_pb2.pyi  agent_pb2_grpc.py  aiservices_pb2.py  aiservices_pb2.pyi  aiservices_pb2_grpc.py  ccai_project_pb2.py  ccai_project_pb2.pyi  ccai_project_pb2_grpc.py  common_pb2.py  common_pb2.pyi  context_pb2.py  context_pb2.pyi  context_pb2_grpc.py  entity_type_pb2.py  entity_type_pb2.pyi  entity_type_pb2_grpc.py  intent_pb2.py  intent_pb2.pyi  intent_pb2_grpc.py  knowledge_base_pb2.pyi  llm_evaluation_pb2.py  llm_evaluation_pb2.pyi  llm_evaluation_pb2_grpc.py  operation_metadata_pb2.py  operation_metadata_pb2.pyi  operations_pb2.py  operations_pb2.pyi  operations_pb2_grpc.py  project_role_pb2.py  project_role_pb2.pyi  project_statistics_pb2.pyi  rag_pb2.py  rag_pb2.pyi  rag_pb2_grpc.py  server_statistics_pb2.pyi  session_pb2.py  session_pb2.pyi  session_pb2_grpc.py  user_pb2.py  (+6 more)
ondewo/qa/: qa_pb2.pyi
ondewo/s2t/: speech_to_text_pb2.py  speech_to_text_pb2.pyi  speech_to_text_pb2_grpc.py
ondewo/sip/: sip_pb2.py  sip_pb2.pyi  sip_pb2_grpc.py
ondewo/t2s/: custom_phonemizer_pb2.pyi  text_to_speech_pb2.py  text_to_speech_pb2.pyi  text_to_speech_pb2_grpc.py
ondewo/vtsi/: call_log_pb2.py  call_log_pb2.pyi  call_log_pb2_grpc.py  calls_pb2.py  calls_pb2.pyi  calls_pb2_grpc.py  client.py  projects_pb2.py  projects_pb2.pyi  projects_pb2_grpc.py  utils.py  voip_pb2.py  voip_pb2.pyi  voip_pb2_grpc.py  vtsi_pb2.py  vtsi_pb2.pyi  vtsi_pb2_grpc.py
ondewo/vtsi/client/: async_client.py  async_services_container.py  async_services_interface.py  client.py  client_config.py  services_container.py  services_interface.py
ondewo/vtsi/client/services/: async_calls.py  async_projects.py  calls.py  projects.py
ondewo/vtsi/client/utils/: __init__.py  keycloak.py
ondewo/vtsi/dataclasses/: server_configurations_dataclasses.py
tests/: __init__.py
tests/unit/: __init__.py  test_services_interface.py
tests/unit/examples/: __init__.py  test_get_vtsi_project.py  test_list_calls.py
tests/unit/utils/: __init__.py  test_client_config.py  test_keycloak.py
