[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ondewo-vtsi-client"
version = "8.2.0"
description = "ONDEWO Voip Telephone System Integration (VTSI) Client library for Python"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "ONDEWO GmbH", email = "office@ondewo.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
# Verbatim from requirements.txt
dependencies = [
    "dataclasses-json",
    "google-api-core",
    "googleapis-common-protos",
    "grpcio",
    "grpcio-reflection",
    "grpcio-tools",
    "mypy-protobuf",
    "ondewo-client-utils>=3.2.0",
    "polling",
    "regex",
    "requests",
]

[project.optional-dependencies]
# From requirements-dev.txt (flake8 -> ruff) plus pytest-cov + pytest-asyncio.
dev = [
    "ruff",
    "loguru",
    "mypy",
    "mypy-protobuf",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "python-dotenv",
    "setuptools",
    "typing_extensions",
]

[project.urls]
Homepage = "https://github.com/ondewo/ondewo-vtsi-client-python"
Repository = "https://github.com/ondewo/ondewo-vtsi-client-python"

# ---------------------------------------------------------------------------
# setuptools: package discovery + package data
# Equivalent to the old setup.py:
#   packages = [n for n in find_packages() if n == 'ondewo' or n.startswith('ondewo.')]
#   include_package_data=True + package_data for py.typed / *.pyi
# ---------------------------------------------------------------------------
[tool.setuptools.packages.find]
include = ["ondewo", "ondewo.*"]

[tool.setuptools.package-data]
"ondewo.vtsi" = ["py.typed", "*.pyi"]
"ondewo.nlu" = ["py.typed", "*.pyi"]
"ondewo.qa" = ["py.typed", "*.pyi"]
"ondewo.s2t" = ["py.typed", "*.pyi"]
"ondewo.t2s" = ["py.typed", "*.pyi"]
"ondewo.sip" = ["py.typed", "*.pyi"]

# ---------------------------------------------------------------------------
# Ruff  (replaces flake8: ignore C901,W504; max-line-length 120; exclude *_pb2*)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 120
target-version = "py39"
# Never lint/format the generated protobuf/gRPC stubs (the old .flake8 excluded
# every ondewo/**/*_pb2*.py / .pyi individually), nor the vendored API / proto
# compiler submodules and generated googleapis tree.
extend-exclude = [
    "*_pb2.py",
    "*_pb2.pyi",
    "*_pb2_grpc.py",
    "ondewo-vtsi-api",
    "ondewo-proto-compiler",
    "googleapis",
]

[tool.ruff.lint]
# pycodestyle (E/W) + pyflakes (F) == the flake8 default rule set.
# C901 (mccabe complexity) is intentionally NOT enabled -> old "ignore = C901".
# W503/W504 (line break around binary operator) are not implemented by ruff,
# so the old "ignore = W504" is a no-op here.
select = ["E", "F", "W"]
ignore = []

[tool.ruff.format]
quote-style = "double"

# ---------------------------------------------------------------------------
# Mypy  (translated faithfully from mypy.ini)
# ---------------------------------------------------------------------------
[tool.mypy]
# mypy.ini targeted 3.9, but mypy 2.x dropped 3.9 as a type-check target
# (minimum is 3.10). Runtime support stays >=3.9 via [project.requires-python].
python_version = "3.10"
ignore_errors = false
ignore_missing_imports = false
disallow_untyped_defs = true
no_implicit_optional = true
strict_optional = true
show_traceback = true
warn_no_return = true
warn_return_any = true
warn_unused_configs = true

# Generated protobuf / gRPC stubs: never type-check them.
[[tool.mypy.overrides]]
module = [
    "ondewo.nlu.agent_pb2",
    "ondewo.nlu.agent_pb2_grpc",
    "ondewo.nlu.aiservices_pb2",
    "ondewo.nlu.aiservices_pb2_grpc",
    "ondewo.nlu.ccai_project_pb2",
    "ondewo.nlu.ccai_project_pb2_grpc",
    "ondewo.nlu.common_pb2",
    "ondewo.nlu.common_pb2_grpc",
    "ondewo.nlu.context_pb2",
    "ondewo.nlu.context_pb2_grpc",
    "ondewo.nlu.entity_type_pb2",
    "ondewo.nlu.entity_type_pb2_grpc",
    "ondewo.nlu.intent_pb2",
    "ondewo.nlu.intent_pb2_grpc",
    "ondewo.nlu.operation_metadata_pb2",
    "ondewo.nlu.operation_metadata_pb2_grpc",
    "ondewo.nlu.operations_pb2",
    "ondewo.nlu.operations_pb2_grpc",
    "ondewo.nlu.project_role_pb2",
    "ondewo.nlu.project_role_pb2_grpc",
    "ondewo.nlu.project_statistics_pb2",
    "ondewo.nlu.project_statistics_pb2_grpc",
    "ondewo.nlu.rag_pb2",
    "ondewo.nlu.rag_pb2_grpc",
    "ondewo.nlu.server_statistics_pb2",
    "ondewo.nlu.server_statistics_pb2_grpc",
    "ondewo.nlu.session_pb2",
    "ondewo.nlu.session_pb2_grpc",
    "ondewo.nlu.user_pb2",
    "ondewo.nlu.user_pb2_grpc",
    "ondewo.nlu.utility_pb2",
    "ondewo.nlu.utility_pb2_grpc",
    "ondewo.nlu.webhook_pb2",
    "ondewo.nlu.webhook_pb2_grpc",
    "ondewo.qa.qa_pb2",
    "ondewo.qa.qa_pb2_grpc",
    "ondewo.s2t.speech_to_text_pb2",
    "ondewo.s2t.speech_to_text_pb2_grpc",
    "ondewo.sip.sip_pb2",
    "ondewo.sip.sip_pb2_grpc",
    "ondewo.t2s.text_to_speech_pb2",
    "ondewo.t2s.text_to_speech_pb2_grpc",
    "ondewo.vtsi.calls_pb2",
    "ondewo.vtsi.calls_pb2_grpc",
    "ondewo.vtsi.projects_pb2",
    "ondewo.vtsi.projects_pb2_grpc",
]
ignore_errors = true
ignore_missing_imports = true

# Third-party packages / sibling generated namespaces without (complete) type stubs.
[[tool.mypy.overrides]]
module = [
    "ondewo.utils.*",
    "ondewo.nlu.*",
    "ondewo.qa.*",
    "ondewo.s2t.*",
    "ondewo.sip.*",
    "ondewo.t2s.*",
    "dataclasses_json.*",
    "google.*",
    "grpc.*",
    "requests.*",
]
ignore_missing_imports = true

# The gRPC stub call returns Any; the generated service wrappers immediately
# return it as the concrete protobuf response type. mypy.ini already exempted the
# hand-written sync wrappers (services.calls / services.projects) from
# warn_return_any; the async_calls / async_projects wrappers are emitted by the
# same `make create_async_services` generator, so they get the same exemption.
[[tool.mypy.overrides]]
module = [
    "ondewo.vtsi.client.services.calls",
    "ondewo.vtsi.client.services.projects",
    "ondewo.vtsi.client.services.async_calls",
    "ondewo.vtsi.client.services.async_projects",
]
warn_return_any = false
